tests/e2e/null_map2.error
Error: syntax error in story at line 3, column 5

3|    c = b[a]
          ^^^

E0104: `Map[string,string]` can't be indexed with `a` of type `null`
