tests/e2e/null_map2.story
a = null
b = {"1": "2"}
c = b[a]
